--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Visoflow",
+  "name": "visoflow",
   "version": "1.1.1",
   "private": false,
   "description": "An open-source Vue 3 component for drawing network diagrams.",
