--- a/package.json
+++ b/package.json
@@ -26,19 +26,20 @@
     "docker:build": "vite build --mode docker"
   },
   "dependencies": {
-    "vue": "^3.4.21",
     "@vueuse/core": "^10.9.0",
-    "pinia": "^2.1.7",
     "chroma-js": "^2.4.2",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "gsap": "^3.12.5",
+    "mitt": "^3.0.1",
     "paper": "^0.12.17",
     "pathfinding": "^0.4.18",
-    "uuid": "^9.0.1",
-    "zod": "^3.22.4",
+    "pinia": "^2.1.7",
     "quill": "^2.0.2",
-    "vue-router": "^4.3.0"
+    "uuid": "^9.0.1",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@isoflow/isopacks": "^0.0.10",
