--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "chroma-js": "^2.4.2",
+    "d3-selection": "^3.0.0",
+    "d3-zoom": "^3.0.0",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "gsap": "^3.12.5",
@@ -44,6 +46,8 @@
   "devDependencies": {
     "@isoflow/isopacks": "^0.0.10",
     "@types/chroma-js": "^2.4.4",
+    "@types/d3-selection": "^3.0.11",
+    "@types/d3-zoom": "^3.0.8",
     "@types/dom-to-image": "^2.6.7",
     "@types/file-saver": "^2.0.7",
     "@types/jsdom": "^21.1.6",
