--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "quill": "^2.0.2",
     "uuid": "^9.0.1",
     "vue": "^3.4.21",
+    "vue-color-kit": "^1.0.6",
     "vue-router": "^4.3.0",
     "zod": "^3.22.4"
   },
