--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visoflow",
-  "version": "1.1.13",
+  "version": "1.1.14",
   "private": false,
   "description": "An open-source Vue 3 component for drawing network diagrams.",
   "license": "MIT",
@@ -28,6 +28,7 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "chroma-js": "^2.4.2",
+    "d3-color": "^3.1.0",
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
     "dom-to-image": "^2.6.0",
@@ -37,6 +38,8 @@
     "paper": "^0.12.17",
     "pathfinding": "^0.4.18",
     "quill": "^2.0.2",
+    "three": "^0.181.2",
+    "three-line2d-geometry": "^1.0.0",
     "uuid": "^9.0.1",
     "vue": "^3.4.21",
     "vue-color-kit": "^1.0.6",
@@ -46,6 +49,7 @@
   "devDependencies": {
     "@isoflow/isopacks": "^0.0.10",
     "@types/chroma-js": "^2.4.4",
+    "@types/d3-color": "^3.1.3",
     "@types/d3-selection": "^3.0.11",
     "@types/d3-zoom": "^3.0.8",
     "@types/dom-to-image": "^2.6.7",
@@ -53,6 +57,7 @@
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.12.7",
     "@types/pathfinding": "^0.0.8",
+    "@types/three": "^0.181.0",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
